# crop-risk

./: .gitignore  README.md  app.py  fetch_data.py  parquet.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app_types/: types.py
components/: crop_select.py  region_select.py  timeseries_chart.py  year_select.py
constants/: crops.py  drought.py  frost.py  heat.py  locations.py  s3.py  soil_moisture.py  utils.py
dal/: fetch_data.py
data_transformations/: heat.py
ingestion/: configs.py  era5_land.py  era5_spei.py
pages/: Drought.py  Frost.py  Heat.py  Precipitation.py  SoilMoisture2.py  SoilMoisture3.py  frost.py  heat.py  soil_moisture_1.py  soil_moisture_2.py  soil_moisture_3.py  spei.py
