[project]
name = "crops"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ilya Yuskevich", email = "ilya.yuskevich@nala.earth"},
]
dependencies = ["streamlit>=1.50.0", "polars>=1.33.1", "plotly>=6.3.0", "pydeck>=0.9.1", "earthengine-api>=1.6.11"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.13.2",
    "pytest>=8.4.2",
]
