[project]
name = "crops"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ilya Yuskevich", email = "ilya.yuskevich@nala.earth"},
]
dependencies = ["streamlit>=1.50.0", "polars>=1.33.1", "plotly>=6.3.0", "pydeck>=0.9.1", "xarray>=2025.10.1", "h5netcdf>=1.6.4", "fsspec>=2025.9.0", "aiobotocore>=2.21.1", "s3fs>=2025.9.0", "dask>=2025.9.1", "kerchunk>=0.2.9", "ujson>=5.11.0", "zarr>=3.1.3", "cdsapi>=0.7.7", "boto3>=1.40.45"]
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.13.2",
    "pytest>=8.4.2",
]
